--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,67 @@
 body{
     background-color:lightcyan;
 }
+nav ul{
+    list-style: none;
+    padding: 2px;
+    margin: 0 auto;
+    display: flex;
+    grid-row: auto;
+    justify-content: center;
+}
+nav li a{
+    text-decoration: none;
+    color:coral;
+    padding: 6px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.img01{
+    width: 15%;
+    height: auto;
+    padding: 2px;
+    display: block;
+    margin: 0 auto;
+    border-radius: 15px;
+}
+.img02{
+    width: 30%;
+    border-radius: 15px;
+}
+header{
+    background-color:brown;
+    width: 100%;
+}
+h1{
+    color:white;
+    padding: 8px;
+    text-align: center;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+}
+footer{
+    background-color: chocolate;
+    color:azure;
+    text-align: center;
+    padding: 2px 0;
+    border-radius: 10px;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+}
+main{
+    background-color: burlywood;
+    padding: 20px;
+    width: 80%;
+    border-radius: 15px;
+    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+p{
+    text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.contenedor{
+    justify-content: center;
+    margin: 0 auto;
+    display: flex;
+}
