--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,25 @@
 body{
     background-color:lightcyan;
 }
+.immg{
+    width:50%;
+    height: 50%;
+}
+td{
+    text-align: center;
+    padding: 10px;
+}
+table{
+    margin: 0 auto;
+    border-color: aqua;
+}
+caption{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 18px;
+}
+th{
+    background-color: brown;
+    color:white;
+    font-size: 18px;
+}
